--- a/unitedUmbrella/app/views/public_lea/show.html.erb
+++ b/unitedUmbrella/app/views/public_lea/show.html.erb
@@ -1,4 +1,20 @@
 <section class="wrapper style5">
+	<style>
+		.insideLabel {
+			font: 9px sans-serif;
+			text-anchor: middle;
+		}
+
+		.arc path {
+			stroke: #fff;
+		}
+
+		.outsideLabel {
+			font: bold 12px Arial;
+			fill: Purple;
+		}
+
+	</style>
 	<div class="inner">
 		<% unless @invalid_auns.empty? %>
 		<%= show_error_message("The following AUNs do not exist:\n" + @invalid_auns.join("\n")) %>
@@ -8,41 +24,63 @@
 	</div>
 </section>
 
-<script type="text/javascript">
-	// variables to determine the canvas size
-	var width = 360;
-	var height = 360;
-	var radius = Math.min(width, height) / 2;
-	var color = d3.scaleOrdinal(d3.schemeCategory20b);
-	var svg = d3.select('#graph')
-	  .append('svg')
-	  .attr('width', width)
-	  .attr('height', height)
-	  .append('g')
-	  .attr('transform', 'translate(' + (width / 2) +
-	    ',' + (height / 2) + ')');
-	var arc = d3.arc()
-	  .innerRadius(0)
-	  .outerRadius(radius);
-	var pie = d3.pie()
-	  .value(function(d) { return d.count; })
-	  .sort(null);
 
-	// loop through all School tuples
-	<% @schools.each do |school| %>
-	    var dataset = [
-		{label: 'Below Basic',count: <%= school.pct_below_basic%> },
-		{label: 'Basic',count: <%= school.pct_basic%> },
-		{label: 'Proficient',count: <%= school.pct_proficient %> },
-		{label: 'Advanced',count: <%= school.pct_advanced %> }
-		]
-	    var path = svg.selectAll('path')
-	      .data(pie(dataset))
-	      .enter()
-	      .append('path')
-	      .attr('d', arc)
-	      .attr('fill', function(d) {
-	        return color(d.data.label);
-	      });
-	<% end %> 
+<script type="text/javascript">
+	function draw_graph() {
+		// variables to determine the canvas size
+		var width = 400;
+		var height = 400;
+		var radius = 150;
+		var color = d3.scaleOrdinal(d3.schemeCategory20);
+		var svg = d3.select('#graph')
+		  .append('svg')
+		  .attr('width', width)
+		  .attr('height', height)
+		  .append('g')
+		  .attr('transform', 'translate(' + (width / 2) +
+		    ',' + (height / 2) + ')');
+		var arc = d3.arc().innerRadius(0).outerRadius(radius);
+		var labelArc = d3.arc().outerRadius(radius + 50).innerRadius(radius);
+		var pie = d3.pie()
+		  .value(function(d) { return d.count; })
+		  .sort(null);
+
+		// loop through all School tuples
+		<% @schools.each do |school| %>
+		    var dataset = [
+			{label: 'Below Basic',count: <%= school.pct_below_basic%> },
+			{label: 'Basic',count: <%= school.pct_basic%> },
+			{label: 'Proficient',count: <%= school.pct_proficient %> },
+			{label: 'Advanced',count: <%= school.pct_advanced %> }
+			]
+			// draw the pie chart
+		    var g = svg.selectAll(".arc")
+		    	.data(pie(dataset))
+		    	.enter().append("g")
+		    	.attr("class", "arc");
+		    g.append("path")
+		    	.attr("d", arc)
+		    	.style("fill", function(d){ return color(d.data.label); });
+
+		    // add value inside the pies
+		    g.append("text")
+		    	.attr("transform", function(d){ 
+		    		return "translate(" + labelArc.centroid(d) + ")"; 
+		    	})
+		    	.attr("dy", ".35em")
+		    	.attr("text-anchor", "middle")
+		    	.attr("class", "outsideLabel")
+		    	.text( function(d) { return d.data.label; });
+
+		    // add labels outside the pies
+		    g.append("text")
+		    	.attr("transform", function(d) {
+		    		return "translate(" + arc.centroid(d) + ")";
+		    	})
+		    	.attr("class", "insideLabel")
+		    	.text(function(d){ return d.data.count; } );
+		<% end %> 
+	}
+	
+	draw_graph();
 </script>
