--- a/unitedUmbrella/app/views/public_school_gender_enrollment/compare.html.erb
+++ b/unitedUmbrella/app/views/public_school_gender_enrollment/compare.html.erb
@@ -145,19 +145,20 @@ function draw_grouped_bar_graph(data_map) {
 
 	// constants that determine the sizes of all the elements
 	var maxData = d3.max(data);
-	console.log(maxData);
 	const 
 		BAR_HEIGHT_SCALE = 1,
 		Y_OFFSET = 0/*100*/, COLUMN_HEIGHT_SCALE = 2,
 	 	HEIGHT = (COLUMN_HEIGHT_SCALE * maxData) + (Y_OFFSET * 3),
 
 		WIDTH = $('#graph').width(),
-	 	COLUMN_WIDTH = 50, COLUMN_INTERVAL = 20, SUBCOLUMN_INTERVAL = 0,
+	 	COLUMN_WIDTH = 50, COLUMN_INTERVAL = 30, SUBCOLUMN_INTERVAL = 0,
+	 	PADDING_OUTER = COLUMN_INTERVAL,
 	 	GROUP_WIDTH = classes.length * (COLUMN_WIDTH + SUBCOLUMN_INTERVAL),
-	 	GRAPH_WIDTH = groups.length * (GROUP_WIDTH + COLUMN_INTERVAL),
-	 	X_OFFSET = 0//(WIDTH - GRAPH_WIDTH)/2; // put the graph at the center
+	 	GRAPH_WIDTH = groups.length * (GROUP_WIDTH + COLUMN_INTERVAL) - COLUMN_INTERVAL + 2 * PADDING_OUTER;
+	 	// X_OFFSET = (WIDTH - GRAPH_WIDTH)/2; // put the graph at the center
 	
-	margin = {top: 100, right: 100, bottom: 100, left: 200};
+	var margin = {top: 100, right: 100, bottom: 100, left: 200};
+
 
 	// create svg
 	var svg = d3.select("#graph").append("svg")
@@ -169,7 +170,7 @@ function draw_grouped_bar_graph(data_map) {
 	var rainbow = d3.scaleSequential(d3.interpolateRainbow).domain([0,classes.length]);
 
 
-	// var years = classes[0].length
+	// add bars
 	svg.selectAll("rect")
 		.data(data)
 		.enter().append("rect")
@@ -179,37 +180,26 @@ function draw_grouped_bar_graph(data_map) {
 		.attr("x", function(d,i){
 			var group_index = Math.floor(i/classes.length);
 			var school_index = i % classes.length;
-
-			var x = (X_OFFSET + group_index * (GROUP_WIDTH + COLUMN_INTERVAL) 
-				+ school_index * (COLUMN_WIDTH + SUBCOLUMN_INTERVAL));
+			var x = PADDING_OUTER + group_index * (GROUP_WIDTH + COLUMN_INTERVAL) 
+					+ school_index * (COLUMN_WIDTH + SUBCOLUMN_INTERVAL);
 			// console.log(x);
-			console.log(group_index,school_index);
+			// console.log(group_index,school_index);
 			return x;})
 		.attr("y", function(d,i){return HEIGHT - Y_OFFSET - (d * BAR_HEIGHT_SCALE);});
 
-	// construct the axis
 
-	console.log("=======");
-	var range = [];
-	for(var i=0; i<groups.length; i++){ 
-		range.push(X_OFFSET + COLUMN_INTERVAL + GROUP_WIDTH/2 + i* GROUP_WIDTH);
-		console.log(X_OFFSET + COLUMN_INTERVAL + GROUP_WIDTH/2 + i* GROUP_WIDTH);
-		// [- GROUP_WIDTH/2, GRAPH_WIDTH + COLUMN_INTERVAL]
-	}
+	// construct and draw x-axis
 	var x = d3.scaleBand()
 		.domain(groups)
-		.range([0,GRAPH_WIDTH])
-		// .padding(COLUMN_INTERVAL)
-	;
-	var xAxis = d3.axisBottom(x).ticks(5);
+		.range([0,GRAPH_WIDTH]);
+	var xAxis = d3.axisBottom(x);
 
-	// draw the x-axis
 	svg.append("g")
 		.attr("class","x axis")
-		.attr("transform","translate("+ 0 +"," + (HEIGHT-Y_OFFSET) + ")")
+		.attr("transform","translate(0," + (HEIGHT-Y_OFFSET) + ")")
 		.call(xAxis);
 
-	// add y-axis
+	// construct and draw y-axis
 	var y = d3.scaleLinear()
 		.range([(HEIGHT-Y_OFFSET), 0])
 		.domain([0, maxData]);
@@ -217,7 +207,7 @@ function draw_grouped_bar_graph(data_map) {
 
 	svg.append("g")
 		.attr("class", "axis y")
-		.attr("transform", "translate("+ 0 + ",0)")
+		.attr("transform", "translate(0,0)")
 		.call(yAxis);
 
 	// // label x-axis
