Mike 10. Fixing line chart for private.

--- a/unitedUmbrella/app/views/private_schools_elementary_enrollment/compare_elementary_enrollment.html.erb
+++ b/unitedUmbrella/app/views/private_schools_elementary_enrollment/compare_elementary_enrollment.html.erb
@@ -99,7 +99,7 @@ function draw_graph(data_map) {
             .attr("y", 6)
             .attr("dy", ".75em")
             .attr("transform", "rotate(-90)")
-            .text("Total enrollment");
+            .text("Total Elementary Enrollment");
 
         // graph title
 	svg.append("text")
@@ -108,7 +108,7 @@ function draw_graph(data_map) {
                 .attr("text-anchor", "middle")
                 .style("font-size", "24px")
                 .style('fill', 'black')
-                .text("School enrollments");
+                .text("Private School Elementary Enrollments");
 }
 
 
