--- a/unitedUmbrella/app/views/public_school_gender_enrollment/compare.html.erb
+++ b/unitedUmbrella/app/views/public_school_gender_enrollment/compare.html.erb
@@ -146,18 +146,17 @@ function draw_grouped_bar_graph(data_map) {
 	// constants that determine the sizes of all the elements
 	var maxData = d3.max(data);
 	const 
-		BAR_HEIGHT_SCALE = 1,
-		Y_OFFSET = 0/*100*/, COLUMN_HEIGHT_SCALE = 2,
-	 	HEIGHT = (COLUMN_HEIGHT_SCALE * maxData) + (Y_OFFSET * 3),
+		BAR_HEIGHT_SCALE = 1.5,
+		Y_OFFSET = 0/*100*/,
+	 	HEIGHT = (BAR_HEIGHT_SCALE * maxData) + (Y_OFFSET * 2),
 
 		WIDTH = $('#graph').width(),
-	 	COLUMN_WIDTH = 50, COLUMN_INTERVAL = 30, SUBCOLUMN_INTERVAL = 0,
-	 	PADDING_OUTER = COLUMN_INTERVAL,
+	 	COLUMN_WIDTH = 70, COLUMN_INTERVAL = 30, SUBCOLUMN_INTERVAL = 0,
+	 	X_OFFSET = COLUMN_INTERVAL,
 	 	GROUP_WIDTH = classes.length * (COLUMN_WIDTH + SUBCOLUMN_INTERVAL),
-	 	GRAPH_WIDTH = groups.length * (GROUP_WIDTH + COLUMN_INTERVAL) - COLUMN_INTERVAL + 2 * PADDING_OUTER;
-	 	// X_OFFSET = (WIDTH - GRAPH_WIDTH)/2; // put the graph at the center
-	
-	var margin = {top: 100, right: 100, bottom: 100, left: 200};
+	 	GRAPH_WIDTH = groups.length * (GROUP_WIDTH + COLUMN_INTERVAL) - COLUMN_INTERVAL + 2 * X_OFFSET;
+	console.log(HEIGHT);
+	var margin = {left: 100, right: 100, top: 100, bottom: 100};
 
 
 	// create svg
@@ -180,12 +179,13 @@ function draw_grouped_bar_graph(data_map) {
 		.attr("x", function(d,i){
 			var group_index = Math.floor(i/classes.length);
 			var school_index = i % classes.length;
-			var x = PADDING_OUTER + group_index * (GROUP_WIDTH + COLUMN_INTERVAL) 
+			var x = X_OFFSET + group_index * (GROUP_WIDTH + COLUMN_INTERVAL) 
 					+ school_index * (COLUMN_WIDTH + SUBCOLUMN_INTERVAL);
 			// console.log(x);
 			// console.log(group_index,school_index);
 			return x;})
-		.attr("y", function(d,i){return HEIGHT - Y_OFFSET - (d * BAR_HEIGHT_SCALE);});
+		.attr("y", function(d,i){
+			return HEIGHT - Y_OFFSET - (d * BAR_HEIGHT_SCALE);});
 
 
 	// construct and draw x-axis
@@ -201,12 +201,14 @@ function draw_grouped_bar_graph(data_map) {
 
 	// construct and draw y-axis
 	var y = d3.scaleLinear()
-		.range([(HEIGHT-Y_OFFSET), 0])
-		.domain([0, maxData]);
+		.domain([0, maxData])
+		.range([HEIGHT - Y_OFFSET, Y_OFFSET])
+		;
+	console.log(HEIGHT);
 	var yAxis = d3.axisLeft(y);
 
 	svg.append("g")
-		.attr("class", "axis y")
+		.attr("class", "y axis")
 		.attr("transform", "translate(0,0)")
 		.call(yAxis);
 
