--- a/unitedUmbrella/app/views/public_school_gender_enrollment/compare.html.erb
+++ b/unitedUmbrella/app/views/public_school_gender_enrollment/compare.html.erb
@@ -101,7 +101,7 @@ function draw_line_graph(data_map) {
 	    .attr("y", 6)
 	    .attr("dy", ".75em")
 	    .attr("transform", "rotate(-90)")
-	    .text("Total enrollment");
+	    .text("Total Enrollment");
 
    	// graph title
 	svg.append("text")
@@ -110,7 +110,7 @@ function draw_line_graph(data_map) {
 		.attr("text-anchor", "middle")  
 		.style("font-size", "24px")   
 		.style('fill', 'black')
-		.text("School enrollments");
+		.text("Public School Enrollment");
 }
 
 
@@ -235,6 +235,25 @@ function draw_grouped_bar_graph(data_map) {
 	// 	.style("font-size", "24px")   
 	// 	.style('fill', 'black')
 	// 	.text("School enrollments");
+
+	var legend = svg.selectAll(".legend")
+		.data(classes.slice().reverse())
+		.enter().append("g")
+		.attr("class","legend")
+		.attr("transform", function(d,i) { return "translate(0," + i * 20 + ")"; });
+
+	legend.append("rect")
+		.attr("x", WIDTH - 300)
+		.attr("width", 18)
+		.attr("height", 18)
+		.style("fill", function(d,i){return rainbow(i % classes.length);});
+
+	legend.append("text")
+		.attr("x", WIDTH - 306)
+		.attr("y", 9)
+		.attr("dy", ".35em")
+		.style("text-anchor", "end")
+		.text(function(d) { return d; });
 }
 </script>
 
