Add title as a parameter to draw-drawing functions

--- a/unitedUmbrella/app/views/public_lea/index.html.erb
+++ b/unitedUmbrella/app/views/public_lea/index.html.erb
@@ -29,7 +29,7 @@
 		var value = <%= raw value %>;
 		data_map[key] = value;
 	<% end %>
-	draw_bar_chart(data_map, "#graph");
+	draw_bar_chart(data_map, "#graph", "Number of Schools by LEA Type");
 </script>
 
 
