--- a/unitedUmbrella/app/views/main/welcome.html.erb
+++ b/unitedUmbrella/app/views/main/welcome.html.erb
@@ -37,22 +37,33 @@
 			</ul>
 
 			<!-- VIEW ONE PUBLIC SCHOOL BASED ON LEA -->
-			<h4>View one school</h4>
+			<h4>View schools in one LEA</h4>
 			<form method="get" action="main/view_public_by_aun">
 				<div class="row uniform">
 					<div class="12u 12u$(xsmall)">
-						<input type="text" name="aun" value="" placeholder="AUN of school" />
+						<input type="text" name="aun" value="" placeholder="AUN of the LEA" />
 					</div>
 					<ul class="actions">
 							<li>
 								<button class="button special"> Submit </button>
 							</li>			
 						</ul>
+					<div class="12u$">
+						<h5>OR Select a school</h5>
+						<div class="select-wrapper">
+							<select name="school-dropdown" id="school-dropdown">
+								<option value="">- Select a School -</option>
+								<% @schools.each do | s | %>
+								   	<option value="<%= s.aun %> "> <%= s.school_name %> </option>
+								<% end %>
+							</select>
+						</div>
+					</div>
 				</div>
 			</form>
 
 			<!-- COMPARE MULTIPLE PUBLIC SCHOOLS BASED ON LEA -->
-			<h4>View multiple schools </h4>
+			<h4>View multiple LEAs </h4>
 			<div class="row uniform">
 				<div class="4u$">
 					<div class="select-wrapper">
@@ -91,4 +102,6 @@
 		<li>&copy; Andrew Ortiz, Huy Nguyen, Michael Teddick, Thanh Vu</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 	</ul>
 </footer>
+
+
 
