--- a/unitedUmbrella/app/views/main/welcome.html.erb
+++ b/unitedUmbrella/app/views/main/welcome.html.erb
@@ -50,26 +50,20 @@
 						</ul>
 				</div>
 			</form>
-			<form method="get" action="public_school_enrollment">
+			<form method="get" action="main/view_public_by_lea">
 				<div class="row uniform">
 					<div class="12u$">
 						<h5>OR Select a LEA</h5>
 						<div class="select-wrapper">
-							<select name="school-dropdown" id="school-dropdown">
+							<select id="school-dropdown">
 								<option value="">- Select a LEA -</option>
 								<% @schools.each do | s | %>
 								   	<option value="<%= s.aun %> "> <%= s.school_name %> </option>
 								<% end %>
 							</select>
 						</div>
-						<input type="hidden" name="aun" value="">
+						<input id="input_lea" type="hidden" name="aun" value="">
 					</div>
-					<ul class="actions">
-							<li>
-								<button class="button special"> Submit </button>
-							</li>			
-						</ul>
-
 				</div>
 			</form>
 
