--- a/unitedUmbrella/app/views/public_school_enrollment/compare_schools.html.erb
+++ b/unitedUmbrella/app/views/public_school_enrollment/compare_schools.html.erb
@@ -152,6 +152,6 @@ var data_map = {};
 	<% end %>
 <% end %>
 console.log(data_map);
-draw_graph(data_map);
+draw_line_chart(data_map, "#graph", "Public school enrollment");
 </script>
 
